--- a/app/src/main/res/layout/image_container.xml
+++ b/app/src/main/res/layout/image_container.xml
@@ -33,14 +33,24 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <Button
+
+<!--    <Button-->
+<!--        -->
+<!--        android:id="@+id/button_retry"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:text="@string/retry"-->
+<!--        android:visibility="gone"-->
+<!--        tools:visibility="visible" />-->
+    <ImageButton
         android:id="@+id/button_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/retry"
         android:visibility="gone"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        android:src="@drawable/retry36" />
 
     <TextView
         android:id="@+id/text_view_empty"
